support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_macro_rparen.i
%module xxx

#define foo(a,x       3
